--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
     <title>Etch a Sketch</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Monoton&family=Protest+Guerrilla&family=Tiny5&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="sketch-board"></div>
+    <div class="buttons">
+        <div class="pixelButton" id="sixteenBit">16x16</div>
+        <div class="pixelButton" id="thirtyTwoBit">32x32</div>
+    </div>
 </body>
 </html>
