added color picker

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div id="sketch-board"></div>
     <div class="buttons">
         <div class="pixelButton" id="sixteenBit">16x16</div>
+        <input type="color" id="colorChoice" value="#ff0000">
         <div class="pixelButton" id="thirtyTwoBit">32x32</div>
     </div>
 </body>
