improved CSS, added eraser

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <div class="leftButton" id="sixteenBit">16 x 16</div>
             <div class="leftButton" id="thirtyTwoBit">32 x 32</div>
             <div class="leftButton" id="sixtyFourBit">64 x 64</div>
-            <!-- change the next two buttons later -->
-            <div class="leftButton" id="sixtyFourBit">64 x 64</div>
-            <div class="leftButton" id="sixtyFourBit">64 x 64</div>
+            <div class="leftButton" id="oneTwentyEight">128 x 128</div>
+
+            <div class="leftButton" id="eraser">Eraser</div>
 
         </div>
 
