broken css fixed with experimental colors

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="script.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Monoton&family=Protest+Guerrilla&family=Tiny5&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
@@ -41,16 +42,18 @@
                 <input type="file" id="imageUpload" accept="image/*" style="display: none;">
                 <div class="uploadButton" id="uploadButton">Upload!</div>
             </div>
-            <div class="downloadButton" id="downloadButton">Download!</div>
+            <div class="downloadButtonContainer">
+                <div class="downloadButton" id="downloadButton">Download!</div>
+            </div>
         </div>
     
     </div>
     
     <div class="footer">
-        <div class="footerText">Etch-a-Sketch</div>
-            <a class="githubIcon" href="https://github.com/hellopiyushlab/etch-a-sketch" target="_blank" rel="noopener noreferrer">
-                <i class="fab fa-github"></i>
-            </a>
-        </div>
+        <div class="footerText">Etch a Sketch</div>
+        <a class="githubIcon" href="https://github.com/your-username" target="_blank" rel="noopener noreferrer">
+            <i class="fab fa-github"></i>
+        </a>
+    </div>
 </body>
 </html>
