--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     
     <div class="footer">
         <div class="footerText">Etch a Sketch</div>
-        <a class="githubIcon" href="https://github.com/your-username" target="_blank" rel="noopener noreferrer">
+        <a class="githubIcon" href="https://github.com/hellopiyushlab/etch-a-sketch" target="_blank" rel="noopener noreferrer">
             <i class="fab fa-github"></i>
         </a>
     </div>
