fixed upload button

--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@
         <div class="miscOptionsContainer">
             <div class="referenceImageContainer">
                 <div class="referenceImage" id="referenceImage"></div>
-                <input type="file" id="imageUpload" accept="image/*" style="display: none;">
-                <div class="uploadButton" id="uploadButton">Upload!</div>
+                <!-- <input type="file" id="imageUpload" accept="image/*" style="display: none;"> -->
+                <div class="uploadButton" id="uploadButton">
+                    <input type="file" id="imageUpload" accept="image/*" style="display: none;">
+                    <div>Upload!</div>
+                </div>
             </div>
             <div class="downloadButtonContainer">
                 <div class="downloadButton" id="downloadButton">Download!</div>
