--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!-- middle -->
         <div class="sketchBoardContainer">
             
-            <div class="sketchBoard" id="sketchBoard"></div>
+            <div class="sketchBoard stencil" id="sketchBoard"></div>
             <div class="instruction">CLICK & HOLD TO DRAW</div>
         
         </div>
@@ -39,9 +39,9 @@
         <div class="miscOptionsContainer">
             <div class="referenceImageContainer">
                 <div class="referenceImage" id="referenceImage"></div>
-                <!-- <input type="file" id="imageUpload" accept="image/*" style="display: none;"> -->
+                <input type="file" id="imageUpload" accept="image/*" style="display: none;">
                 <div class="uploadButton" id="uploadButton">
-                    <input type="file" id="imageUpload" accept="image/*" style="display: none;">
+                    <!-- <input type="file" id="imageUpload" accept="image/*" style="display: none;"> -->
                     <div>Upload!</div>
                 </div>
             </div>
